# ocwt

./: .gitignore  .prettierignore  LICENSE  OPENCODE_NATIVE_OCWT_DESIGN.md  OPENCODE_NATIVE_OCWT_IMPLEMENTATION_PLAN.md  README.md  mkdocs.yml  oxlint.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  docs-ci.yml  docs-deploy.yml  nightly-release.yml  nightly.yml  release.yml
docs/: PLAN.md  faq.md  index.md  installation.md  ocwt  quickstart.md  troubleshooting.md
docs/commands/: build.md  close.md  completion.md  config.md  open.md
docs/concepts/: branch-naming.md  planning-mode.md  worktrees.md
docs/recipes/: from-file.md  release-flow.md  team-workflows.md
docs/releases/: v0.1.0.md  v0.1.1.md
scripts/: clean-dist.mjs  prepare-nightly-version.mjs
src/: index.ts  plugin-commands.ts  plugin-runtime.ts  plugin.ts
src/commands/: README.md
src/config/: README.md
src/lib/: branch.ts  config.ts  errors.ts  git.ts  json.ts  paths.ts  session.ts  symlink.ts  types.ts
src/ocwt/: __init__.py  __main__.py  branching.py  cli.py  config_store.py  git_ops.py  symlinks.py
tests/: branch.test.ts  config.test.ts  git.test.ts  ocwt-close.test.ts  ocwt-list.test.ts  ocwt-open.test.ts  paths.test.ts  plugin.test.ts  session.test.ts  symlink.test.ts  test_branching.py  test_cli.py  test_close_cmd.py  test_completion_cmd.py  test_config_cli.py  test_config_store.py  test_open_completion.py  test_open_editor.py  test_open_file_context.py  test_open_plan.py  test_symlinks.py
(+9 files in other folders)
