[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ocwt"
version = "0.1.0"
description = "OpenCode worktree helper"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Marco" }]
dependencies = [
  "typer>=0.12.5,<1.0.0",
]

[project.scripts]
ocwt = "ocwt.__main__:main"

[dependency-groups]
dev = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.6.0",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
  "ty>=0.0.18",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "RUF"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["docs"]

[tool.ty.rules]
all = "error"

[tool.hatch.build.targets.wheel]
packages = ["src/ocwt"]
